# vinmo

./: .gitignore  README.md  demo_vineyard_web_app.sh  launch_vineyard_web.sh  setup_navigation.sh  setup_workspace.sh
doc/: QUICKSTART.md  costmap-web.md
src/vineyard_mower_description/: CMakeLists.txt  package.xml
src/vineyard_mower_description/config/: control_config.yaml  display.rviz  sensors.rviz
src/vineyard_mower_description/launch/: display.launch.py  display_with_sensors.launch.py
src/vineyard_mower_description/scripts/: sensor_monitor.py
src/vineyard_mower_description/urdf/: vineyard_mower.urdf copy.xacro  vineyard_mower.urdf.xacro
src/vineyard_mower_gazebo/: CMakeLists.txt  README_VINEYARD_SIMULATION.md  README_vineyard_world.md  package.xml
src/vineyard_mower_gazebo/config/: vineyard_config.yaml
src/vineyard_mower_gazebo/launch/: clock_bridge.launch.py  debug_control.launch.py  gazebo.launch.py  minimal_test.launch.py  realistic_vineyard_world.launch.py  robot_simulation.launch.py  robot_simulation_navigation.launch.py  robot_with_sensors.launch.py  simple_pub_sub.launch.py  test_clock_sync.launch.py  vineyard_simulation.launch.py
src/vineyard_mower_gazebo/materials/textures/: README.md
src/vineyard_mower_gazebo/models/irrigation_pipe/: model.config  model.sdf
src/vineyard_mower_gazebo/models/storage_building/: model.config  model.sdf
src/vineyard_mower_gazebo/models/vine_plant/: model.config  model.sdf
src/vineyard_mower_gazebo/models/vineyard_post/: model.config  model.sdf
src/vineyard_mower_gazebo/scripts/: check_clock.py  create_heightmap.py  generate_terrain.py  generate_vineyard_world.py  scan_frame_republisher.py  simple_publisher.py  simple_subscriber.py  vineyard_environment_monitor.py
src/vineyard_mower_gazebo/worlds/: realistic_vineyard.world  vineyard.world  vineyard_large.world
src/vineyard_mower_interfaces/: CMakeLists.txt  README.md  package.xml
src/vineyard_mower_interfaces/action/: PlanPath.action
src/vineyard_mower_interfaces/include/vineyard_mower_interfaces/: action_wrappers.hpp  json_services.hpp  service_structs.hpp
src/vineyard_mower_interfaces/msg/: VineProximity.msg
src/vineyard_mower_interfaces/srv/: GenerateCostmap.srv  GetCostmapInfo.srv  UpdateCostmapLayer.srv
src/vineyard_mower_navigation/: CMakeLists.txt  README_COSTMAP.md  README_NAVIGATION.md  package.xml  setup.py
src/vineyard_mower_navigation/config/: amcl_params.yaml  costmap_config.yaml  nav2_default_view.rviz  nav2_params.yaml  path_planning_config.yaml  robot_footprint.yaml  slam.rviz  vineyard_behavior_tree.xml  vineyard_simulation.rviz
src/vineyard_mower_navigation/config/vineyard/: vineyard_slam.lua
src/vineyard_mower_navigation/launch/: costmap_generation.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py  slam_teleop.launch.py  vineyard_navigation.launch.py  vineyard_web_system.launch.py
src/vineyard_mower_navigation/launch/old_launch/: load_map.launch.py  path_planning.launch.py  save_map.launch.py  slam_with_rviz.launch.py  teleop.launch.py
src/vineyard_mower_navigation/scripts/: costmap_publisher.py  costmap_service.py  generate_test_images.py  gps_reference_publisher.py  laser_scan_frame_remapper.py  test_costmap_client.py  test_navigation_integration.py  test_system_integration.py  vineyard_row_detector.py
src/vineyard_mower_navigation/test/: test_costmap_generation.py  test_path_planning.py
src/vineyard_mower_navigation/vineyard_mower_navigation/: __init__.py  costmap_generator.py  costmap_service.py  costmap_web_service.py  path_planner.py  path_planning_server.py  path_visualizer.py  satellite_processor.py
src/vineyard_mower_perception/: CMakeLists.txt  README.md  package.xml  setup.py
src/vineyard_mower_perception/config/: perception_params.yaml
src/vineyard_mower_perception/launch/: perception_system.launch.py
src/vineyard_mower_perception/resource/: vineyard_mower_perception
src/vineyard_mower_perception/scripts/: advanced_perception_fusion.py  depth_obstacle_mapper.py  sensor_health_monitor.py  vine_detection_node.py
src/vineyard_mower_perception/vineyard_mower_perception/: __init__.py
src/vineyard_web_interface/: CMakeLists.txt  README.md  package.xml
src/vineyard_web_interface/config/: web_interface_config.yaml
src/vineyard_web_interface/launch/: web_interface_complete.launch.py  web_interface_simple.launch.py
src/vineyard_web_interface/scripts/: integration_test_runner.py  system_status_publisher.py  web_interface_monitor.py
vineyard_costmap_web/: README.md  docker-compose.yml
vineyard_costmap_web/backend/: Dockerfile  requirements.txt
vineyard_costmap_web/backend/src/: auth.py  database.py  image_processing.py  main.py  models.py  ros_integration.py  schemas.py
vineyard_costmap_web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
vineyard_costmap_web/frontend/src/: App.tsx  index.css
vineyard_costmap_web/frontend/src/components/: Header.tsx  Sidebar.tsx
vineyard_costmap_web/frontend/src/components/costmap/: CostmapViewer.tsx
vineyard_costmap_web/frontend/src/components/parameters/: ParameterControlPanel.tsx
vineyard_costmap_web/frontend/src/hooks/: useAppStore.ts  useROS.ts
vineyard_costmap_web/frontend/src/pages/: CostmapPage.tsx  Dashboard.tsx
vineyard_costmap_web/frontend/src/services/: apiService.ts  rosService.ts
vineyard_costmap_web/frontend/src/types/: index.ts  roslib.d.ts
