<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vineyard_web_interface</name>
  <version>1.0.0</version>
  <description>Web interface package for vineyard costmap management and visualization</description>
  
  <maintainer email="developer@vineyard-robotics.com">Vineyard Robotics Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Custom interfaces -->
  <depend>vineyard_mower_interfaces</depend>
  
  <!-- Web bridge dependencies -->
  <depend>rosbridge_server</depend>
  
  <!-- Navigation dependencies -->
  <depend>vineyard_mower_navigation</depend>
  <depend>vineyard_mower_gazebo</depend>
  <depend>vineyard_mower_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
